# clang-tutor

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: apple-silicon-llvm-from-sources.yml  apple-silicon.yml  x86-darwin-llvm-from-sources.yml  x86-darwin.yml  x86-ubuntu-llvm-from-sources.yml  x86-ubuntu.yml
HelloWorld/: CMakeLists.txt  HelloWorld.cpp
include/: CodeRefactor.h  CodeStyleChecker.h  LACommenter.h  Obfuscator.h  UnusedForLoopVar.h
lib/: CMakeLists.txt  CodeRefactor.cpp  CodeStyleChecker.cpp  HelloWorld.cpp  LACommenter.cpp  Obfuscator.cpp  UnusedForLoopVar.cpp
test/: CMakeLists.txt  CodeRefactor_Class.cpp  CodeRefactor_Other.cpp  CodeRefactor_Struct.cpp  CodeRefactor_derived_only.cpp  CodeStyleChecker-standalone-tool.cpp  CodeStyleCheckerAnonymous.cpp  CodeStyleCheckerConversionOp.cpp  CodeStyleCheckerFunction.cpp  CodeStyleCheckerMacro.cpp  CodeStyleCheckerTypesAndVars.cpp  CodeStyleCheckerUnderscore.cpp  CodeStyleCheckerVector.cpp  HelloWorld-basic.cpp  HelloWorld-macro.cpp  HelloWorld-no-records.cpp  HelloWorld-vector.cpp  LACBool.cpp  LACChar.cpp  LACFloat.cpp  LACInt.cpp  LACLong.cpp  LACString.cpp  MBA_add_int.cpp  MBA_float_add.cpp  MBA_float_sub.cpp  MBA_sub_int.cpp  UnusedForLoopVar_nested.cpp  UnusedForLoopVar_range_loop.cpp  UnusedForLoopVar_range_loop_ignored.cpp  UnusedForLoopVar_range_loop_macro.cpp  UnusedForLoopVar_regular_loop.cpp  UnusedForLoopVar_regular_loop_function_macro.cpp  UnusedForLoopVar_regular_loop_ignored.cpp  UnusedForLoopVar_regular_loop_macro.cpp  ct-code-style-checker-basic.cpp  ct-code-style-checker-include-files.cpp  hello-test.cpp  lit.cfg.py  lit.site.cfg.py.in
test/Inputs/: ct-code-style-checker-header-file.h
tools/: CMakeLists.txt  CodeRefactorMain.cpp  CodeStyleCheckerMain.cpp  LACommenterMain.cpp
